--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Schnirivadze/fzfexplorer#readme",
   "dependencies": {
+    "drivelist": "^12.0.2",
     "fzf": "^0.5.2"
   },
   "devDependencies": {
